--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Flower Info View Controller-->
         <scene sceneID="PI0-OC-8rn">
             <objects>
-                <viewController id="GPw-Eb-34V" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CBFlowerInfoViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="GPw-Eb-34V" customClass="CBFlowerInfoViewController" customModule="CherrydaleBuds" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="S7i-vK-qp8"/>
                         <viewControllerLayoutGuide type="bottom" id="QEy-O0-oSf"/>
